package sae.transport.comparison.exceptions;

// TODO : Ajouter la JavaDoc manquante avant de tag POO-v2

public class AucunCheminException extends Exception {
    public AucunCheminException(String message) {
        super(message);
    }
}
